--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -10,17 +10,24 @@
                 </div>
                 <div class="col-lg-6 col-md-5">
                     <div class="header__top__right">
-                        <div class="header__top__links">
+                        <ul th:if="${session.accountLogged != null}">
+                        <li class="header__top__links" >
+                            <a style="color: #fff" href="/" th:value="session.username">[(${session.username})]</a></li>
+                            <li class="header__top__links">
+                                <a style="color: #fff"x` 	th:href="@{/logout}">Đăng xuất</a></li>
+                        </li>
+                        </ul>
+                        <div  class="header__top__links" th:if="${session.accountLogged == null}">
                             <a style="color: #fff" href="/login">Đăng nhập</a>
                             <a style="color: #fff"x` href="/register">Đăng ký</a>
                         </div>
-                        <div class="header__top__hover">
-                            <span>Ngôn Ngữ</span>
-                            <ul>
-                                <li>Tiếng Việt</li>
-                                <li>Tiếng Anh</li>
-                            </ul>
-                        </div>
+<!--                        <div class="header__top__hover">-->
+<!--                            <span>Ngôn Ngữ</span>-->
+<!--                            <ul>-->
+<!--                                <li>Tiếng Việt</li>-->
+<!--                                <li>Tiếng Anh</li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -74,3 +81,4 @@
         <div class="canvas__open"><i class="fa fa-bars"></i></div>
     </div>
 </header>
+
