--- a/webBanTiVi/src/main/resources/templates/user1/index.html
+++ b/webBanTiVi/src/main/resources/templates/user1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="light-style layout-menu-fixed" xmlns:th="http://www.thymeleaf.org">
+<html class="light-style" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,8 @@
     <meta name="description" content=""/>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" th:href="@{/image/logobig6-03.png}"/>
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;display=swap"
+          rel="stylesheet">
     <!-- Icons. Uncomment required icon fonts -->
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/fonts/boxicons.css}"/>
 
@@ -16,29 +17,29 @@
     <link rel="stylesheet" th:href="@{/admin/assets/css/demo.css}"/>
     <link rel="stylesheet" th:href="@{/admin/assets/css/select2.min.css}"/>
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
 
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/select2-plugin.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/bill.css}"/>
+
+    <link rel="stylesheet" th:href="@{/admin/plugin/css/profile.css}">
 
     <!-- Helpers -->
     <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
     <script th:src="@{/admin/assets/vendor/libs/jquery/jquery.js}"></script>
 </head>
 <body>
-<div class="layout-wrapper layout-content-navbar">
+<div class="layout-content-navbar layout-without-menu ">
     <div class="layout-container">
-        <aside th:replace="~{/admin/layout/_sidebar.html}">
-        </aside>
         <div class="layout-page">
-            <div th:replace="~{/admin/layout/_navbar.html}">
+            <div th:replace="~{/user1/layout/_navbar.html}">
             </div>
             <div class="content-wrapper">
-                <div class="container-xxl flex-grow-1 container-p-y">
+                <div class="container-xxl flex-grow-1 container-p-y ">
                     <div th:replace="~{${session.pageView}}"></div>
                 </div>
-                <div th:replace="~{/admin/layout/_footer.html}"></div>
+                <div th:replace="~{/user1/layout/_footer.html}"></div>
                 <div class="content-backdrop fade"></div>
             </div>
         </div>
@@ -66,7 +67,6 @@
 <script th:src="@{/admin/assets/js/pages-account-settings-account.js}"></script>
 
 <script th:src="@{/admin/plugin/js/date_picker_order.js}"></script>
-
 <script th:src="@{/admin/plugin/js/select2-plugin.js}"></script>
 </body>
 </html>
