--- a/webBanTiVi/src/main/resources/templates/user1/page/invoice/invoice.html
+++ b/webBanTiVi/src/main/resources/templates/user1/page/invoice/invoice.html
@@ -1,6 +1,6 @@
 <section>
     <nav aria-label="breadcrumb">
-        <ol class="breadcrumb breadcrumb-style1">
+        <ol class="breadcrumb breadcrumb-style1 fs-5">
             <li class="breadcrumb-item">
                 <a href="/client">Trang chủ</a>
             </li>
@@ -9,9 +9,28 @@
     </nav>
 </section>
 <section class="mt-4 ">
-    <h4 class="fw-bold">Đơn hàng đang giao</h4>
-    <div class="text-center">
-        <input type="text" class="form-control w-px-500 d-inline" id="search_invoice" placeholder="HD93849">
-        <button class="btn btn-danger">Tìm kiếm</button>
+    <div class="row">
+        <div class="col-lg-4 mb-4 order-0">
+            <div class="card">
+                <div class="d-flex align-items-end row">
+                    <div class="col-sm-7">
+                        <div class="card-body">
+                        </div>
+                    </div>
+                    <div class="col-sm-5 text-center text-sm-left">
+                        <div class="card-body pb-0 px-0 px-md-4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-8 col-md-4 order-1">
+            <div class="row">
+                <div class="card">
+                    <div class="card-body">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
