--- a/webBanTiVi/src/main/resources/templates/user1/page/product/tivi.html
+++ b/webBanTiVi/src/main/resources/templates/user1/page/product/tivi.html
@@ -4,7 +4,7 @@
 </section>
 <section class="row mt-4">
     <nav aria-label="breadcrumb">
-        <ol class="breadcrumb breadcrumb-style1">
+        <ol class="breadcrumb breadcrumb-style1 fs-5">
             <li class="breadcrumb-item">
                 <a href="/client">Trang chủ</a>
             </li>
