--- a/webBanTiVi/src/main/resources/templates/user1/index.html
+++ b/webBanTiVi/src/main/resources/templates/user1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="light-style" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" class="light-style" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" th:href="@{/admin/plugin/css/select2-plugin.css}"/>
     <link rel="stylesheet" th:href="@{/admin/plugin/css/bill.css}"/>
 
-    <link rel="stylesheet" th:href="@{/admin/plugin/css/profile.css}">
+<!--    <link rel="stylesheet" th:href="@{/admin/plugin/css/profile.css}">-->
 
     <!-- Helpers -->
     <script th:src="@{/admin/assets/vendor/js/helpers.js}"></script>
@@ -64,13 +64,11 @@
     <div class="layout-overlay layout-menu-toggle"></div>
 </div>
 <!--build-->
-
 <script th:src="@{/admin/assets/vendor/libs/popper/popper.js}"></script>
 <script th:src="@{/admin/assets/vendor/js/bootstrap.js}"></script>
 <script th:src="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js}"></script>
 <script th:src="@{/admin/assets/js/select2.min.js}"></script>
 <script th:src="@{/admin/assets/vendor/js/menu.js}"></script>
-
 <!-- end build -->
 
 <!-- Main JS -->
