--- a/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user1/layout/_navbar.html
@@ -6,6 +6,7 @@
     .nav-item:hover {
         transform: scale(1.05);
     }
+
     h5 {
         color: #ffffff !important;
     }
@@ -20,13 +21,16 @@
             </button>
             <div class="collapse navbar-collapse fs-6" id="nav1">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <span class="navbar-text">
-             Hệ thống cửa hàng điện tử Big6store
-                </span>
+                    <li class="nav-item">
+                        <span class="navbar-text">
+                            Địa chỉ: xã Yên Hòa,huyện Yên Mô,tỉnh Ninh Bình
+                        </span>
+                    </li>
                 </ul>
                 <ul class="navbar-nav flex-row align-items-center ms-auto">
                     <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                        <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0)" id="navbarDropdown"
+                           role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
                             Ngôn ngữ
                         </a>
@@ -35,43 +39,43 @@
                             <li><a class="dropdown-item" href="javascript:void(0)">Tiếng anh</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item" th:if="${session.accountLogged == null}" >
-                        <a class="nav-link" href="/login" >Đăng Nhập</a>
+                    <li class="nav-item" th:if="${session.accountLogged == null}">
+                        <a class="nav-link" href="/login">Đăng Nhập</a>
                     </li>
-                    <li  class="nav-item" th:if="${session.accountLogged != null}" >
+                    <li class="nav-item" th:if="${session.accountLogged != null}">
                         <ul class="navbar-nav flex-row align-items-center ms-auto">
                             <!-- Place this tag where you want the button to render. -->
                             <!-- User -->
                             <li class="nav-item navbar-dropdown dropdown-user dropdown">
-                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);" data-bs-toggle="dropdown">
+                                <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
+                                   data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img th:src="@{'/image/'+${session.image}}" alt="" class="w-px-5 h-px-5 rounded-circle">
+                                        <img th:src="@{'/image/'+${session.image}}" alt=""
+                                             class="w-px-5 h-px-5 rounded-circle">
                                     </div>
                                 </a>
                                 <ul class="dropdown-menu" style="font-size: 15px">
                                     <li>
-                                        <a class="dropdown-item"  th:href="@{/client/profile}">
-                                            <i class="bx bx-power-off me-2"  ></i>
-                                            <span class="align-middle"  >Thông tin tài khoản</span>
+                                        <a class="dropdown-item" th:href="@{/client/profile}">
+                                            <i class="bx bx-power-off me-2"></i>
+                                            <span class="align-middle">Thông tin tài khoản</span>
                                         </a>
-                                        <a class="dropdown-item" th:href="@{/order}" >
-                                            <i class="bx bx-power-off me-2" ></i>
-                                            <span class="align-middle"  >Đơn Hàng</span>
+                                        <a class="dropdown-item" th:href="@{/order}">
+                                            <i class="bx bx-power-off me-2"></i>
+                                            <span class="align-middle">Đơn Hàng</span>
                                         </a>
                                         <a class="dropdown-item" th:href="@{/logout}">
-                                            <i class="bx bx-power-off me-2 " ></i>
-                                            <span class="align-middle"   >Đăng Xuất</span>
+                                            <i class="bx bx-power-off me-2 "></i>
+                                            <span class="align-middle">Đăng Xuất</span>
                                         </a>
                                     </li>
                                 </ul>
                             </li>
-                            <!--/ User -->
-
+                            <!--/ User -->>
                             <li class="nav-item lh-1 me-3">
-                                <span >[(${session.username})]</span>
+                                <span>[(${session.username})]</span>
                             </li>
                         </ul>
-
                     </li>
                 </ul>
             </div>
@@ -110,7 +114,8 @@
                         <a class="nav-link" href="javascript:void(0)">
                             <span class="position-relative">
                                 <i class='bx bx-cart bx-md'></i>
-                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning " style="font-size: 60%">+9 </span>
+                                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning "
+                                      style="font-size: 60%">+9 </span>
                             </span>
                         </a>
                     </li>
