--- a/webBanTiVi/src/main/resources/templates/user1/page/profile/profile.html
+++ b/webBanTiVi/src/main/resources/templates/user1/page/profile/profile.html
@@ -1,133 +1,196 @@
-<section class="account">
-    <div class="sidebar">
-        <div class="ctn">
-            <div class="header">
-                <div class="info">
-                    <div class="avatar avatar-online">
-                        <img th:src="@{'/image/'+${session.image}}" alt="" class="w-px-5 h-px-5 rounded-circle">
-                    </div>
-                    <div class="summer">
-                        <p><strong>[(${session.username})]</strong></p>
-                    </div>
-                </div>
+<style>.order:hover {
+    background-color: #f1f0f0;
+}</style>
+<section>
+    <div class="text-center mb-3">
+        <div class="d-inline-flex">
+            <div>
+                <h2 class="text-uppercase">CHÀO MỪNG QUAY TRỞ LẠI, oanadfjápfjạdffh[(${session.username})] </h2>
+                <p><i>Kiểm tra và chỉnh sửa thông tin cá nhân của bạn tại đây</i></p>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="/account/info" class="actived"><i class='bx bx-user-circle'></i><span>Thông tin tài khoản</span></a></li>
-                    <li><a href="/account/order"><i class='bx bxl-dropbox' ></i><span>Đơn hàng của bạn</span></a></li>
-                    <li><a href="/account/comment"><i class='bx bxs-comment-detail' ></i><span>Quản lý bình luận</span></a></li>
-                    <li><a href="/account/review"><i class='bx bx-edit' ></i><span>Quản lý đánh giá</span></a></li>
-                    <li><a href="/logout"><i class='bx bx-log-out'></i><span>Đăng xuất</span></a></li>
-                </ul>
-            </nav>
+        </div>
+        <div class="d-inline-block mx-3">
+            <img src="/image/download.jpg" alt="" id="avatar"
+                 class="w-px-200 h-px-200 rounded-circle avatar">
+            <input type="file" hidden accept="image/" id="avatarUpload">
         </div>
     </div>
-    <div class="body-content">
-
-
-        <h1>Thông tin tài khoản</h1>
-
-        <div class="header">
-            <div class="bg">
-                <div class="text">
-                    <h2>CHÀO MỪNG QUAY TRỞ LẠI, MANH</h2>
-                    <p><i>Kiểm tra và chỉnh sửa thông tin cá nhân của bạn tại đây</i></p>
+    <div class="nav-align-left mb-4">
+        <ul class="nav nav-tabs col-lg-3" role="tablist">
+            <li class="nav-item">
+                <button type="button" class="nav-link active" role="tab" data-bs-toggle="tab"
+                        data-bs-target="#navs-top-home"
+                        aria-controls="navs-top-home" aria-selected="false">
+                    Thông tin tài khoản
+                </button>
+            </li>
+            <li class="nav-item">
+                <button type="button" class="nav-link" role="tab" data-bs-toggle="tab"
+                        data-bs-target="#navs-top-profile" aria-controls="navs-top-profile" aria-selected="true">
+                    Đơn hàng của bạn
+                </button>
+            </li>
+            <li class="nav-item">
+                <a type="button" class="nav-link" href="/logout"
+                   aria-controls="navs-top-home" aria-selected="false">
+                    Đăng xuất
+                </a>
+            </li>
+        </ul>
+        <div class="tab-content col-lg-9">
+            <div class="tab-pane fade show active" id="navs-top-home" role="tabpanel">
+                <form>
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="name">Họ và tên</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="name" placeholder="John Doe">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="gender">Giới tính</label>
+                        <div class="col-sm-10" id="gender">
+                            <div class="form-check form-check-inline mt-3">
+                                <input class="form-check-input" type="radio" name="gender" id="male"
+                                       value="true">
+                                <label class="form-check-label" for="male">Nam</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="gender" id="female"
+                                       value="false">
+                                <label class="form-check-label" for="female">Nữ</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="email">Email</label>
+                        <div class="col-sm-10">
+                            <input type="text" id="email" class="form-control" placeholder="john.doe"
+                                   aria-label="john.doe" aria-describedby="basic-default-email2">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="phone">Phone No</label>
+                        <div class="col-sm-10">
+                            <input type="text" id="phone" class="form-control phone-mask"
+                                   placeholder="658 799 8941">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="address">Địa chỉ</label>
+                        <div class="col-sm-10">
+                            <input type="text" id="address" class="form-control"
+                                   placeholder="Liên trì 1, Yên Hòa, Yên Mô, Ninh bình">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="birthday">Ngày sinh</label>
+                        <div class="col-sm-10">
+                            <input type="date" id="birthday" class="form-control"
+                                   value="2021-06-18">
+                        </div>
+                    </div>
+                    <div class="row mb-3 mt-4">
+                        <span class="text-center fs-6 text-decoration-underline">Để trống nếu không muốn thay đổi mật khẩu</span>
+                    </div>
+                    <div class="row mb-3">
+                        <label class="col-sm-2 col-form-label" for="passNew">Mật khẩu mới</label>
+                        <div class="col-sm-10">
+                            <div class="input-group input-group-merge form-password-toggle">
+                                <input type="password" class="form-control" id="passNew" placeholder="············"
+                                       aria-describedby="basic-default-password2">
+                                <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-3 ">
+                        <label class="col-sm-2 col-form-label" for="birthday">Nhập lại mật khẩu mới</label>
+                        <div class="col-sm-10 ">
+                            <div class="input-group input-group-merge form-password-toggle">
+                                <input type="password" class="form-control" id="rePassNew"
+                                       placeholder="············"
+                                       aria-describedby="basic-default-password2">
+                                <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-3 text-center">
+                        <button type="submit" class="btn btn-primary"><span class="px-3">Cập nhật</span></button>
+                    </div>
+                </form>
+            </div>
+            <div class="tab-pane fade" id="navs-top-profile" role="tabpanel">
+                <h4>Đơn hàng đang mua</h4>
+                <div class="mb-4 mx-4">
+                    <div class="mb-3 row order">
+                        <div class="row mt-3">
+                            <span class="text-start col-sm-6">Mã đơn: #9389eudj93</span>
+                            <span class="text-end col-sm-6">Đang giao hàng</span>
+                            <hr>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img class="w-25 d-inline"
+                                     src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
+                                <img class="w-25 d-inline"
+                                     src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
+                                <span class="d-inline-flex">Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh</span>
+                            </div>
+                            <span class="col-sm-6 text-end ">
+                            Tổng tiền: <span class="fs-4 position-relative">1234566 </span><span
+                                    class="text-decoration-underline fs-6">đ</span>
+                        </span>
+                            <div class="text-end mb-3">
+                                <button class="btn btn-outline-dark">Xem chi tiết</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-3 row order">
+                        <div class="row mt-3">
+                            <span class="text-start col-sm-6">Mã đơn: #9389eudj93</span>
+                            <span class="text-end col-sm-6">Đang giao hàng</span>
+                            <hr>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img class="w-25 d-inline"
+                                     src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
+                                <img class="w-25 d-inline"
+                                     src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
+                                <span class="d-inline-flex">Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh</span>
+                            </div>
+                            <span class="col-sm-6 text-end ">
+                            Tổng tiền: <span class="fs-4 position-relative">1234566 </span><span
+                                    class="text-decoration-underline fs-6">đ</span>
+                        </span>
+                            <div class="text-end mb-3">
+                                <button class="btn btn-outline-dark">Xem chi tiết</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="icon">
-                <img src="/image/icon-account-info.png">
-            </div>
-        </div>
-        <div class="account-layout ">
-            <div class="row equaHeight" data-obj=".col .box-bg-white">
-                <div class="col col-lg">
-                    <h3>Cập nhật thông tin cá nhân</h3>
-                    <div class="box-bg-white">
-                        <div class="account-form">
-                            <form>
-                                <div class="form-controls">
-                                    <label>Họ tên:</label>
-                                    <div class="controls">
-                                        <input type="text" value="Manh" name="Title" id="Title" placeholder="Họ tên *"
-                                               data-required="1">
-                                    </div>
-                                </div>
-
-                                <div class="form-controls">
-                                    <label>Giới tính:</label>
-                                    <div class="controls">
-                                        <label class="radio-ctn">
-                                            <input checked="" type="radio" name="Sex" value="true">
-                                            <span class="checkmark"></span>
-                                            <span><strong>Nam</strong></span>
-                                        </label>
-
-                                        <label class="radio-ctn">
-                                            <input type="radio" name="Sex" value="false">
-                                            <span class="checkmark"></span>
-                                            <span><strong>Nữ</strong></span>
-                                        </label>
-                                    </div>
-                                </div>
-                                <div class="form-controls">
-                                    <label>Điện thoại:</label>
-                                    <div class="controls">
-                                        <input type="tel" value="0394408163" name="PhoneNumber" id="PhoneNumber"
-                                               placeholder="Điện thoại *" data-required="1">
-                                    </div>
-                                </div>
-
-                                <div class="form-controls">
-                                    <label>Email:</label>
-                                    <div class="controls">
-                                        <input type="text" value="manhbd1306@gmial.com" name="Email" id="Email"
-                                               placeholder="Email *" data-required="1">
-                                    </div>
-                                </div>
-
-                                <div class="form-controls">
-                                    <label>Địa chỉ:</label>
-                                    <div class="controls">
-                                        <input type="text" value="VP" name="Address" id="Address"
-                                               placeholder="Địa chỉ *" data-required="1">
-                                    </div>
-                                </div>
-
-                                <div class="form-controls">
-                                    <label>Ngày tháng năm sinh:</label>
-                                    <div class="controls">
-                                        <input type="text" value="20/02/2006" name="UserBirthDate" id="UserBirthDate"
-                                               placeholder="Ngày tháng năm sinh">
-                                    </div>
-                                </div>
-
-                                <div class="form-controls">
-                                    <div class="controls submit-controls">
-                                        <p style="text-align:center;">Để trống nếu không muốn thay đổi mật khẩu.</p>
-                                    </div>
-                                </div>
-
-                                <div class="form-controls">
-                                    <label>Mật khẩu mới: </label>
-                                    <div class="controls">
-                                        <input type="password" value="" name="PasswordHash" id="PasswordHash"
-                                               placeholder="Mật khẩu mới">
-                                    </div>
-                                </div>
-
-                                <div class="form-controls">
-                                    <label>Nhập lại mật khẩu mới: </label>
-                                    <div class="controls">
-                                        <input type="text" name="SecurityStamp" id="SecurityStamp"
-                                               placeholder="Nhập lại mật khẩu mới">
-                                    </div>
-                                </div>
-                                <div class="form-controls">
-                                    <div class="controls submit-controls">
-                                        <button type="submit">XÁC NHẬN</button>
-                                    </div>
-                                </div>
-                            </form>
+                <h4>Đơn hàng hoàn thành</h4>
+                <div class="mb-4 mx-4">
+                    <div class="mb-3 row order">
+                        <div class="row mt-3">
+                            <span class="text-start col-sm-6">Mã đơn: #9389eudj93</span>
+                            <span class="text-end col-sm-6">Đã hoàn thành</span>
+                            <hr>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <img class="w-25 d-inline"
+                                     src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
+                                <img class="w-25 d-inline"
+                                     src="/image/smart-tivi-toshiba-43-inch-43v31mp-04.jpg">
+                                <span class="d-inline-flex">Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh và Xiaomi POCO C40 Xanh</span>
+                            </div>
+                            <span class="col-sm-6 text-end ">
+                            Tổng tiền: <span class="fs-4 position-relative">1234566 </span><span
+                                    class="text-decoration-underline fs-6">đ</span>
+                        </span>
+                            <div class="text-end mb-3">
+                                <button class="btn btn-outline-dark">Xem chi tiết</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -135,3 +198,22 @@
         </div>
     </div>
 </section>
+<script>
+    document.getElementById("avatar").addEventListener("click", function () {
+        document.getElementById("avatarUpload").click()
+    })
+    document.getElementById("avatarUpload").addEventListener("change", function () {
+        var selectFile = this.files[0]
+        if (selectFile) {
+            // Kiểm tra xem tệp đã chọn có phải là hình ảnh
+            if (selectFile.type.startsWith('image/')) {
+                // Tạo đường dẫn URL cho hình ảnh và hiển thị nó
+                const imageURL = URL.createObjectURL(selectFile);
+                document.getElementById("avatar").src = imageURL;
+            } else {
+                alert('Vui lòng chọn một tệp hình ảnh.');
+                document.getElementById("avatarUpload").value = ''; // Đặt lại trường nhập
+            }
+        }
+    })
+</script>
